--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                             <a class="btn btn-primary btn-lg" href="#" role="button" onclick="reset()">Reset</a>
                             <a class="btn btn-primary btn-lg" href="#" role="button" onclick="answerWrong()">Wrong</a>
                             <a class="btn btn-primary btn-lg" href="#" role="button" onclick="answerRight()">Right</a>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#newArticleModal">
+                                    Show Questions
+                            </button>
                         </div>
                     </div>
                     <div class="col-sm-6">
@@ -69,6 +72,36 @@
             </div>
             
         </div>
+
+        <!-- Modal zur Erstellung eines neuen Blogartikels -->
+    <div class="modal fade" id="newArticleModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <form class="modal-content" id="addNewArticleForm">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Neuen Artikel erstellen</h4>
+          </div>
+          <div class="modal-body">
+                <div class="form-group">
+                    <label for="inputHeader">Überschrift:</label>
+                    <input type="text" class="form-control" id="inputHeader" placeholder="Überschrift" maxlength="50" required/>
+                </div>
+                <div class="form-group">
+                    <label for="inputText" title="Text kann mit HTML fomatiert werden">
+                        Text:</label>
+                    <textarea class="form-control" id="inputText" placeholder="Worum geht es?" 
+                    maxlength="250" rows="8" required></textarea>
+                </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success" onclick="addArticle()">Hinzufügen</button>
+            <button type="reset" class="btn btn-default" data-dismiss="modal">Schließen</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+
         <script type="text/javascript" src="js/data.js"></script>
         <script type="text/javascript" src="js/courses/swtpp.js"></script>
         <script type="text/javascript" src="js/courses/ecommerce.js"></script>
