--- a/index.html
+++ b/index.html
@@ -79,23 +79,10 @@
         <form class="modal-content" id="addNewArticleForm">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Neuen Artikel erstellen</h4>
+            <h4 class="modal-title" id="myModalLabel">Stack Content</h4>
           </div>
           <div class="modal-body">
-                <div class="form-group">
-                    <label for="inputHeader">Überschrift:</label>
-                    <input type="text" class="form-control" id="inputHeader" placeholder="Überschrift" maxlength="50" required/>
-                </div>
-                <div class="form-group">
-                    <label for="inputText" title="Text kann mit HTML fomatiert werden">
-                        Text:</label>
-                    <textarea class="form-control" id="inputText" placeholder="Worum geht es?" 
-                    maxlength="250" rows="8" required></textarea>
-                </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-success" onclick="addArticle()">Hinzufügen</button>
-            <button type="reset" class="btn btn-default" data-dismiss="modal">Schließen</button>
+                
           </div>
         </form>
       </div>
