Bug fixes index.html

--- a/index.html
+++ b/index.html
@@ -74,16 +74,18 @@
         </div>
 
         <!-- Modal zur Erstellung eines neuen Blogartikels -->
-    <div class="modal fade" id="showContentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal fade" id="showContentModal" tabindex="-1" role="dialog" aria-labelledby="showContentModalLabel">
       <div class="modal-dialog" role="document">
-        
-        <div class="modal-header">
+        <div class="modal-content" id="addNewArticleForm">
+          <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title" id="showContentModalLabel">Stack Content</h4>
           </div>
           <div class="modal-body">
-                <ul id="modal-questions-list"></ul>
+                <ul id="modal-questions-list">
+                </ul>
           </div>
+        </div>
       </div>
     </div>
 
