--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" media="screen" href="css/style.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://botmonster.com/jquery-bootpag/jquery.bootpag.js"></script>
 </head>
 
 <body>
@@ -60,15 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="container-fluid">
-                        <nav aria-label="Page navigation">
-                            <ul class="pagination" id="pages"></ul>
-                        </nav>
-                    </div>
-                </div>
-            </div>
+            <div id="show_paginator"></div>
         </div>
 
     </div>
