--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         </div>
     </div>
 
-
     <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/courses/swtpp.js"></script>
     <script type="text/javascript" src="js/courses/ecommerce.js"></script>
     <script type="text/javascript" src="js/courses/webtech.js"></script>
+    <script type="text/javascript" src="js/tools.js"></script>
     <script type="text/javascript" src="js/stacks.js"></script>
 </body>
 
