--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         <div class="row">
                             <p id='rem'></p>
                             <div class="progress">
-                                <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                                    <span class="">50%</span>
+                                <div class="progress-bar" id="progressbar" style="width:50%">
+                                    <span class=""></span>
                                 </div>
                             </div>
                         </div>
