--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <div class="row">
                                 <p id='rem'></p>
                                 <div class="progress">
-                                    <div class="progress-bar-info" id="progressbar">
+                                    <div class="progress-bar" id="progressbar">
                                         <span class=""></span>
                                     </div>
                                 </div>
