--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                         <button id="show-btn" type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#showCardsModal">
                                     Show Cards
                             </button>
+                        <a class="btn btn-success btn-lg" href="" role="button" id="pdf-btn" target="_blank">PDF</a>
                     </div>
                 </div>
                 <div class="col-sm-6">
