--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="page-header" id="stack_title">
                 <h2 id="stacktitle">1. Premier League Clubs (Example)</h2>
             </div>
-            
+
             <div class="row">
                 <div class="col-sm-6">
                     <div class="container-fluid" id="cardsPanel">
@@ -70,7 +70,9 @@
                     <div class="container-fluid" id="logPanel">
                         <fieldset>
                             <legend>Log</legend>
-                            <ul id="logList"></ul>
+                            <div id="log-scrollarea">
+                                <ul id="logList"></ul>
+                            </div>
                         </fieldset>
                     </div>
                 </div>
