--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <script type="text/javascript" src="js/courses/ecommerce.js"></script>
     <script type="text/javascript" src="js/courses/swtpp.js"></script>
     <script type="text/javascript" src="js/courses/webtech.js"></script>
+    <script type="text/javascript" src="js/courses/pv.js"></script>
     <script type="text/javascript" src="js/tools.js"></script>
     <script type="text/javascript" src="js/stacks.js"></script>
 </body>
