--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <script type="text/javascript" src="js/courses/swtpp.js"></script>
     <script type="text/javascript" src="js/courses/webtech.js"></script>
     <script type="text/javascript" src="js/courses/ec.js"></script>
+    <script type="text/javascript" src="js/courses/5g.js"></script>
     <script type="text/javascript" src="js/courses/pv.js"></script>
     <script type="text/javascript" src="js/tools.js"></script>
     <script type="text/javascript" src="js/stacks.js"></script>
