feature: Add EDT stacks

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     </div>
 
     <script type="text/javascript" src="js/data.js"></script>
+    <script type="text/javascript" src="js/courses/edt.js"></script>
     <script type="text/javascript" src="js/courses/ecommerce.js"></script>
     <script type="text/javascript" src="js/courses/swtpp.js"></script>
     <script type="text/javascript" src="js/courses/webtech.js"></script>
