Add Data Science Toolbox

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
     </div>
 
     <script type="text/javascript" src="js/data.js"></script>
+    <script type="text/javascript" src="js/courses/dst.js"></script>
     <script type="text/javascript" src="js/courses/edt.js"></script>
     <script type="text/javascript" src="js/courses/ecommerce.js"></script>
-    <script type="text/javascript" src="js/courses/swtpp.js"></script>
     <script type="text/javascript" src="js/courses/webtech.js"></script>
     <script type="text/javascript" src="js/courses/ec.js"></script>
     <script type="text/javascript" src="js/courses/5g.js"></script>
-    <script type="text/javascript" src="js/courses/pv.js"></script>
+    <script type="text/javascript" src="js/courses/swtpp.js"></script>
     <script type="text/javascript" src="js/tools.js"></script>
     <script type="text/javascript" src="js/stacks.js"></script>
 </body>
